--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ layout: compress
                          Projects
                          </a> -->
                          <a class="btn zoombtn" href="{{ site.url }}/work_exp">
-                         Work-Experience
+                         Work Experience
                          </a>
                  </h3>
             </div>
