--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -92,6 +92,12 @@
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 				</ul>
 			</li> -->
+            	<li>
+				<a href="#">Experience</a>
+				<ul class="dl-submenu">
+					<li><a href="{{ site.url }}/work_exp/">Work Experience</a></li>
+				</ul>
+			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
