--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,17 +85,23 @@
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
-			<li>
+<!-- 			<li>
 				<a href="#">Posts</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 				</ul>
-			</li>
-            	<li>
+			</li> -->
+            <li>
 				<a href="#">Experience</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/work_exp/">Work Experience</a></li>
+				</ul>
+			</li>
+            <li>
+				<a href="#">Projects</a>
+				<ul class="dl-submenu">
+					<li><a href="{{ site.url }}/projects/">Projects</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
