--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -93,6 +93,12 @@
 				</ul>
 			</li> -->
             <li>
+				<a href="#">Project Portfolio</a>
+				<ul class="dl-submenu">
+					<li><a href="{{ site.url }}/projects/">Project Portfolio</a></li>
+				</ul>
+			</li>
+            <li>
 				<a href="#">Experience</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/work_exp/">Work Experience</a></li>
