--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -103,7 +103,7 @@
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/work_exp/">Work Experience</a></li>
 				</ul>
-			</li>
+<!-- 			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
@@ -111,6 +111,6 @@
 		        {% assign domain = site.url %}
 		    {% endif %}
 		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
-		  {% endfor %}
+		  {% endfor %} -->
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
