--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -93,17 +93,11 @@
 				</ul>
 			</li> -->
             <li>
-				<a href="#">Project Portfolio</a>
-				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/projects/">Project Portfolio</a></li>
-				</ul>
-			</li>
-            <li>
 				<a href="#">Experience</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/work_exp/">Work Experience</a></li>
 				</ul>
-<!-- 			</li>
+			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
@@ -111,6 +105,6 @@
 		        {% assign domain = site.url %}
 		    {% endif %}
 		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
-		  {% endfor %} -->
+		  {% endfor %}
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
