--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@ layout: compress
                          Posts
                          </a> -->
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                         Project Portfolio
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/work_exp">
                          Work Experience
