--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: compress
 <!--                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                          </a> -->
-                         <a class="btn zoombtn" href="{{ site.url }}/projects style="color: red;"">
+                         <a class="btn zoombtn" href="{{ site.url }}/projects">
                          🌟 Project Portfolio 🌟
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/work_exp">
